# saddle-ai-fov

./: Cargo.toml  README.md  __data.json  index.html
_app/: version.json
demo/basic_grid/: index.html
demo/cone_2d/: index.html
demo/cone_3d/: index.html
demo/exploration_memory/: index.html
demo/lab/: index.html
demo/layers/: index.html
demo/multi_viewers/: index.html
demo/perception_kernel/: index.html
demo/radius_2d/: index.html
demo/rect_2d/: index.html
demo/stealth_detection/: index.html
docs/: algorithm-tradeoffs.md  architecture.md  configuration.md  physics-integration.md
examples/: Cargo.toml
examples/basic_grid/: Cargo.toml
examples/basic_grid/src/: main.rs
examples/cone_2d/: Cargo.toml
examples/cone_2d/src/: main.rs
examples/cone_3d/: Cargo.toml
examples/cone_3d/src/: main.rs
examples/exploration_memory/: Cargo.toml
examples/exploration_memory/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: e2e.rs  main.rs
examples/lab/src/scenarios/: mod.rs  support.rs
examples/layers/: Cargo.toml
examples/layers/src/: main.rs
examples/multi_viewers/: Cargo.toml
examples/multi_viewers/src/: main.rs
examples/perception_kernel/: Cargo.toml
examples/perception_kernel/src/: main.rs
examples/radius_2d/: Cargo.toml
examples/radius_2d/src/: main.rs
examples/rect_2d/: Cargo.toml
examples/rect_2d/src/: main.rs
examples/stealth_detection/: Cargo.toml
examples/stealth_detection/src/: main.rs
examples/support/: Cargo.toml
examples/support/src/: lib.rs
src/: awareness.rs  awareness_tests.rs  components.rs  config.rs  debug.rs  grid.rs  lib.rs  messages.rs  resources.rs  spatial.rs  spatial_tests.rs  stealth.rs  stealth_tests.rs  stimulus.rs  stimulus_tests.rs  systems.rs  systems_tests.rs
(+42 files in other folders)
