[workspace]
members = [
    "support",
    "basic_grid",
    "exploration_memory",
    "multi_viewers",
    "cone_2d",
    "cone_3d",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
saddle-ai-fov = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
