[workspace]
members = [
    "support",
    "basic_grid",
    "exploration_memory",
    "multi_viewers",
    "cone_2d",
    "cone_3d",
    "radius_2d",
    "layers",
    "stealth_detection",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
saddle-ai-fov = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
